[build-system]
build-backend = "setuptools.build_meta"

requires = [
  "setuptools>=60",
  "setuptools-scm>=8",
]

[project]
name = "pytransperth"
version = "0.1.3"
description = "A Python wrapper for the Transperth API"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Elliana May", email = "me@mause.me" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  # 'Environment :: Web Environment',
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "lxml",
  "python-dateutil",
  "requests",
]

urls.repository = "https://github.com/Mause/pytransperth"

[dependency-groups]
dev = [
  "pdbpp>=0.10.3",
  "pytest>=8.3.3",
  "responses>=0.25.3",
]
